--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,151 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#circle {
+    width: 12vw;
+    height: 12vw;
+    border-radius: 50rem 0 0 0;
+  }
+  
+  #no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  #no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  
+  #about,
+  #home,
+  #portfolio {
+    transition: all 0.5s ease-in-out;
+  }
+  
+  .hamburgerline {
+    @apply w-[30px] h-[2px] my-2 block bg-white;
+  }
+  
+  .hamburgeractive > span:nth-child(1) {
+    @apply rotate-45;
+  }
+  .hamburgeractive > span:nth-child(2) {
+    @apply scale-0;
+  }
+  .hamburgeractive > span:nth-child(3) {
+    @apply -rotate-45;
+  }
+  
+  .navbarfixed {
+    @apply fixed z-[9999] bg-[#22293e] bg-opacity-70;
+    backdrop-filter: blur(4px);
+    box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
+  }
+  
+  @media (prefers-color-scheme: dark) {
+    html {
+      color-scheme: dark;
+    }
+  }
+  
+  @layer utilities {
+    .list-navbar {
+      @apply relative font-montserrat-r tracking-[1px];
+    }
+    .list-navbar::after {
+      @apply lg:content-[''] lg:absolute lg:scale-y-0 lg:bg-primary lg:h-[2px] lg:w-[0%] lg:left-0 lg:-bottom-[4px] lg:duration-300;
+    }
+    .list-navbar:hover::after {
+      @apply lg:w-[100%] lg:scale-110;
+    }
+  }
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 30px transparent;
+    border-radius: 10px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #14b8a6;
+    
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(0.17deg, #5430e2 1.22%, #00ffe1 59.21%);
+  }  
+
+
+/* Font */
+@font-face {
+    font-family: "Montserrat Bold";
+    src: url("/fonts/Montserrat-Bold.ttf") format("ttf");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: "Montserrat Regular";
+    src: url("/fonts/Montserrat-Regular.ttf") format("ttf");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: "Montserrat SemiBold";
+    src: url("/fonts/Montserrat-SemiBold.ttf") format("ttf");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: "Montserrat Medium";
+    src: url("/fonts/Montserrat-Medium.ttf") format("ttf");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: "Inter Bold";
+    src: url("/fonts/Inter-Bold.ttf") format("ttf");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: "Inter Regular";
+    src: url("/fonts/Inter-Regular.ttf") format("ttf");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: "Inter SemiBold";
+    src: url("/fonts/Inter-SemiBold.ttf") format("ttf");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: "Inter Medium";
+    src: url("/fonts/Inter-Medium.ttf") format("ttf");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  
